demo file explorer

--- a/Kudu.Services.Web/Kudu.Services.Web.csproj
+++ b/Kudu.Services.Web/Kudu.Services.Web.csproj
@@ -151,6 +151,73 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Env.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Explorer\images\ajax_load.gif" />
+    <Content Include="Explorer\images\file.gif" />
+    <Content Include="Explorer\images\folder.png" />
+    <Content Include="Explorer\images\loader_2.gif" />
+    <Content Include="Explorer\index.html" />
+    <Content Include="Explorer\scripts\gettheme.js" />
+    <Content Include="Explorer\scripts\jquery-1.8.2.js" />
+    <Content Include="Explorer\scripts\jqx-all.js" />
+    <Content Include="Explorer\scripts\jqxbuttongroup.js" />
+    <Content Include="Explorer\scripts\jqxbuttons.js" />
+    <Content Include="Explorer\scripts\jqxcalendar.js" />
+    <Content Include="Explorer\scripts\jqxchart.js" />
+    <Content Include="Explorer\scripts\jqxcheckbox.js" />
+    <Content Include="Explorer\scripts\jqxcolorpicker.js" />
+    <Content Include="Explorer\scripts\jqxcombobox.js" />
+    <Content Include="Explorer\scripts\jqxcore.js" />
+    <Content Include="Explorer\scripts\jqxdata.export.js" />
+    <Content Include="Explorer\scripts\jqxdata.js" />
+    <Content Include="Explorer\scripts\jqxdatetimeinput.js" />
+    <Content Include="Explorer\scripts\jqxdocking.js" />
+    <Content Include="Explorer\scripts\jqxdockpanel.js" />
+    <Content Include="Explorer\scripts\jqxdragdrop.js" />
+    <Content Include="Explorer\scripts\jqxdropdownbutton.js" />
+    <Content Include="Explorer\scripts\jqxdropdownlist.js" />
+    <Content Include="Explorer\scripts\jqxexpander.js" />
+    <Content Include="Explorer\scripts\jqxgauge.js" />
+    <Content Include="Explorer\scripts\jqxgrid.aggregates.js" />
+    <Content Include="Explorer\scripts\jqxgrid.columnsreorder.js" />
+    <Content Include="Explorer\scripts\jqxgrid.columnsresize.js" />
+    <Content Include="Explorer\scripts\jqxgrid.edit.js" />
+    <Content Include="Explorer\scripts\jqxgrid.export.js" />
+    <Content Include="Explorer\scripts\jqxgrid.filter.js" />
+    <Content Include="Explorer\scripts\jqxgrid.grouping.js" />
+    <Content Include="Explorer\scripts\jqxgrid.js" />
+    <Content Include="Explorer\scripts\jqxgrid.pager.js" />
+    <Content Include="Explorer\scripts\jqxgrid.selection.js" />
+    <Content Include="Explorer\scripts\jqxgrid.sort.js" />
+    <Content Include="Explorer\scripts\jqxgrid.storage.js" />
+    <Content Include="Explorer\scripts\jqxinput.js" />
+    <Content Include="Explorer\scripts\jqxknockout.js" />
+    <Content Include="Explorer\scripts\jqxlistbox.js" />
+    <Content Include="Explorer\scripts\jqxlistmenu.js" />
+    <Content Include="Explorer\scripts\jqxmaskedinput.js" />
+    <Content Include="Explorer\scripts\jqxmenu.js" />
+    <Content Include="Explorer\scripts\jqxnavigationbar.js" />
+    <Content Include="Explorer\scripts\jqxnumberinput.js" />
+    <Content Include="Explorer\scripts\jqxpanel.js" />
+    <Content Include="Explorer\scripts\jqxpopup.js" />
+    <Content Include="Explorer\scripts\jqxprogressbar.js" />
+    <Content Include="Explorer\scripts\jqxradiobutton.js" />
+    <Content Include="Explorer\scripts\jqxrating.js" />
+    <Content Include="Explorer\scripts\jqxscrollbar.js" />
+    <Content Include="Explorer\scripts\jqxscrollview.js" />
+    <Content Include="Explorer\scripts\jqxslider.js" />
+    <Content Include="Explorer\scripts\jqxsplitter.js" />
+    <Content Include="Explorer\scripts\jqxswitchbutton.js" />
+    <Content Include="Explorer\scripts\jqxtabs.js" />
+    <Content Include="Explorer\scripts\jqxtooltip.js" />
+    <Content Include="Explorer\scripts\jqxtouch.js" />
+    <Content Include="Explorer\scripts\jqxtree.js" />
+    <Content Include="Explorer\scripts\jqxvalidator.js" />
+    <Content Include="Explorer\scripts\jqxwindow.js" />
+    <Content Include="Explorer\styles\images\icon-down.png" />
+    <Content Include="Explorer\styles\images\icon-left.png" />
+    <Content Include="Explorer\styles\images\icon-right.png" />
+    <Content Include="Explorer\styles\images\icon-up.png" />
+    <Content Include="Explorer\styles\jqx.base.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
